--- a/_posts/2019-12-19-the-us-narrative-today.html
+++ b/_posts/2019-12-19-the-us-narrative-today.html
@@ -1759,107 +1759,107 @@ stories:
   domain: http://www.memphisflyer.com/
   link: https://www.memphisflyer.com/memphis/willie-farmer-keeps-the-blues-running-like-a-v8-ford/Content?oid=21057523
 images:
-- name: scream-DSC_0087.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0087.jpg
-- name: status-berlin-status-berlin-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-cinnamon-rolls.jpg
-- name: 35201856153_61bc075e4b-rain-princess.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-rain-princess.jpg
-- name: fence-mexico-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-yellow-paper.jpg
-- name: adam-smith-adam-smith-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-crabapple.jpg
-- name: ellis-island-ellisisland-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-deep-connections.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-propaganda-leaflets.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-propaganda-leaflets.JPG
-- name: windowmountain-window-mountain-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-constitution.jpg
-- name: razorwire-DSC-0080-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colorful-blocks.jpg
-- name: eduardo-eduardo-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-graham-sutherland.jpg
-- name: catacombs-catacombs-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-constitution.jpg
-- name: old-house-oldhouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-umberto-bocc.jpg
-- name: old-granary-field-granaryfield-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-mucha-mult.jpg
-- name: braceros-domingo-ulloa-downtown-sidewalk-washington.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-downtown-sidewalk-washington.jpg
-- name: trucksilo-trucksilo-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-really-hot.jpg
-- name: stalin-time-rocking-chair-on-porch_36332220150_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-rocking-chair-on-porch_36332220150_o.jpg
-- name: bf-skinner-butterfly-purple-flower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-butterfly-purple-flower.jpg
-- name: oldtrain-oldtrain-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-hot-spicy.jpg
-- name: berlinwall2-berlinwall-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-space-pizza.jpg
-- name: beach-rocks-beach-rocks-currents.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents.jpg
-- name: containership-containership-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-cinnamon-rolls.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-clean-view.jpg
-- name: carry-load-carryload-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-far-away.jpg
-- name: old-school-house-old-schoolhouse-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-neo-instinct.jpg
-- name: rockingchair-rockingchair-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-kand-two.jpg
-- name: bf-skinner-please-do-not-feed-the-pigeon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-please-do-not-feed-the-pigeon.jpg
-- name: oldbarn-oldbarn-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-blue-brush.jpg
-- name: rockingchair-rockingchair-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purple-pond.jpg
-- name: beach-rocks-beach-rocks-currents-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-jap-wav-pr.jpg
-- name: beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
-- name: bf-skinner-skulls-catacomb-up-close.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-skulls-catacomb-up-close.jpg
-- name: window-window-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-hot-spicy.jpg
-- name: nazi-invasion-seattle-looking-north.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seattle-looking-north.jpg
-- name: nazi-invasion-statue-face-looking-up.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-face-looking-up.jpg
-- name: carry-load-carryload-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-satan-red.jpg
-- name: san-francisco-street-view-san-francisco-street-view-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crunch-paper.jpg
-- name: statue-of-liberty-front-view-statueofliberty-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-rainbow-festival.jpg
-- name: old-church-oldchurch-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-mucha-mult.jpg
-- name: white-house-lawn-white-house-lawn-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-mucha-mult.jpg
-- name: curtain-curtain-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dali-three.jpg
-- name: crow-crow-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-gred-mash.jpg
-- name: eduardo-eduardo.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo.jpg
-- name: berlinwall-DSC-0084-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-far-away.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-satan-red.jpg
-- name: supreme-court-supremecourt-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dali-three.jpg
-- name: white-house-lawn-white-house-window-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-purple-pond.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-gan-vogh.jpg
-- name: bf-skinner-downtown-light-posts.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-downtown-light-posts.jpg
-- name: hollywood-building-hollywood-building-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-circuit.jpg
-- name: dc-statue-dcstatue-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-colorful-dream.jpg
-- name: rockingchair-face-2-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-colorful-dream.jpg
+- name: docks-docks-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-bright-sand.jpg
+- name: razorcliff-razorcliff-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dry-skin.jpg
+- name: art-museum-art-museum-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-plentiful.jpg
+- name: old-granary-field-granaryfield-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-space-pizza.jpg
+- name: store-on-corner-store-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-neo-instinct.jpg
+- name: bf-skinner-down-the-line-harlem.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-down-the-line-harlem.jpg
+- name: statue-of-liberty-front-view-statueofliberty-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-purp-paper.jpg
+- name: razorwire-DSC-0080-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-internet-numbers.jpg
+- name: powerlines-power-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-atari-asteroids.jpg
+- name: stalin-time-cruise-ship-shore-log.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-cruise-ship-shore-log.jpg
+- name: ellis-island-ellisisland-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-mucha-mult.jpg
+- name: oldhotel-oldhotel-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-yellow-paper.jpg
+- name: bf-skinner-stainless-tree-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-stainless-tree-clouds.jpg
+- name: stalin-time-down-side-street-shop-sign.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-down-side-street-shop-sign.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-5.jpg
+- name: dc-statue-dcstatue-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-yellow-collage.jpg
+- name: stories-losangeles-from-observatory-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-losangeles-from-observatory-free-woman.jpg
+- name: beach-clouds-lifeguard-beachclouds-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-sand-paper.jpg
+- name: rockingchair-rockingchair-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dali-three.jpg
+- name: liberty-back-statue-liberty-back-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-atari-missle.jpg
+- name: death-valley-death-valley-national-park-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-graham-sutherland.jpg
+- name: christianity-christianity-under-construction-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-light-dali.jpg
+- name: razorcliff-razorcliff-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-really-hot.jpg
+- name: adam-smith-adam-smith-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-crunch-paper.jpg
+- name: server-cloud-server-racks-clouds-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-horiz-circuit.jpg
+- name: oldhousecars-house-old-cars-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-light-dali.jpg
+- name: old-church-oldchurch-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-neo-instinct.jpg
+- name: eduardo-eduardo-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-emily-carr.jpg
+- name: old-granary-field-granaryfield-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-ww2-dresden.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-internet-numbers.jpg
+- name: blossombar-post-modern-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-post-modern-file-00-00-24-99.jpg
+- name: stories-white-man-burning-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-white-man-burning-down.jpg
+- name: gypsymosaic-gypsy-eyes-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-atari-asteroids.jpg
+- name: bluelake-gred-mash-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-01-17-38.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dark-soul.jpg
+- name: statue-of-liberty-front-view-statueofliberty-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-clean-view.jpg
+- name: aws-s3-square-23-160-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-23-160-800-500-0-max-0--5--1.jpg
+- name: nyc-flag-nycflag-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-plentiful.jpg
+- name: trucksilo-trucksilo-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-gred-mash.jpg
+- name: bordercrossing-bordercrossing-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-rainbow-festival.jpg
+- name: abe-lincoln-one-purp-paper-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purp-paper-file-00-00-07-91.jpg
+- name: lincoln-memorial-lincolnmemorial-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colored-circuits.jpg
+- name: hollywood-building-hollywood-building-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-yellow-collage.jpg
+- name: yosemite-yosemite-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-creativity.jpg
+- name: aws-s3-stories-white-man-burning-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-white-man-burning-down.jpg
+- name: white-house-whitehouse-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-green-zuma.jpg
+- name: locked-up-steam-lock-up-steam-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dali-three.jpg
+- name: birdhouse-birdhouse-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-ww2-dresden.jpg
+- name: trucksilo-trucksilo.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo.jpg
+- name: rockingchair-rockingchair-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-oily-mcoilface.jpg
 ---
 Grant Will Provide Home Rehab Dollars To Residents.&nbsp;Georgia Restores 22,000 Purged Voter Registrations.&nbsp;Explorers Thought This Bizarre Fish Was A Rock!.&nbsp;Region 4B Schedule Change.&nbsp;Zabiegi Na Cellulit Wojkowice.&nbsp;Extradition Underway To Bring Convicted Killer To Minnesota.&nbsp;Residents Rally For And Against Impeachment Tuesday Night.&nbsp;Lady Patriots Win City Of Metropolis Tourney.&nbsp;
